BoaUAT/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Negotiation%2FReview</fullName>
        </values>
        <values>
            <fullName>Proposal%2FPrice Quote</fullName>
        </values>
        <values>
            <fullName>Prospecting</fullName>
        </values>
        <values>
            <fullName>Ready To Process</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>BOA_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>BOA Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BOA Orders (BOA Order)</relationshipLabel>
        <relationshipName>BOA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Reason__c</fullName>
        <description>This field is used to specify the reason why the order was lost</description>
        <label>Closed Lost Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email_id__c</fullName>
        <label>Contact Email id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Currency_Code_in_Exo__c</fullName>
        <formula>CASE(CurrencyIsoCode, 
&quot;NZD&quot;,0, 
&quot;AUD&quot;,1, 
&quot;USD&quot;,2, 
&quot;GBP&quot;,3, 
&quot;EUR&quot;,4, 
&quot;YEN&quot;,5, 
&quot;SGD&quot;,6,00)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Currency Code in Exo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Pdf_Date__c</fullName>
        <formula>TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Pdf Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GoCloudz_PDF_Name__c</fullName>
        <formula>IF( OR(TEXT(StageName) == &apos;Closed Won&apos;,TEXT(StageName) == &apos;Ready To Process&apos;) ,&apos;Invoice for &apos; + Name,  IF(OR(TEXT(StageName) == &apos;Prospecting&apos;,TEXT(StageName) == &apos;Proposal/Price Quote&apos;,TEXT(StageName) == &apos;Negotiation/Review&apos;), &apos;Quote for &apos; + Name, TEXT(StageName)) )</formula>
        <label>PDF Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Note__c</fullName>
        <label>Internal Note</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_URL__c</fullName>
        <label>Invoice URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Lead_Time__c</fullName>
        <label>Lead Time</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sea Freight Lead Time</fullName>
                </value>
                <value>
                    <fullName>Air Freight Lead Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_hold__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On hold</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onboarding_Point_of_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Onboarding Point of Contact</label>
        <referenceTo>User</referenceTo>
        <relationshipName>BOA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onboarding_Target_Closure_Date__c</fullName>
        <label>Onboarding Target Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Onboarding_Target_Start_Date__c</fullName>
        <label>Onboarding Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Placed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Placed By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>BOA Orders</relationshipLabel>
        <relationshipName>BOA_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Source__c</fullName>
        <label>Order Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WP-Order</fullName>
                </value>
                <value>
                    <fullName>M-Order</fullName>
                </value>
                <value>
                    <fullName>SF-Order</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Walk-In</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Order_Synced__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Order Synced</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Order</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BOA Orders (Parent Order)</relationshipLabel>
        <relationshipName>BOA_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_type__c</fullName>
        <label>Payment type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BOA Credit</fullName>
                </value>
                <value>
                    <fullName>Payment Express</fullName>
                </value>
                <value>
                    <fullName>EFTPOS</fullName>
                </value>
                <value>
                    <fullName>Cash</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SEQNO_EXO__c</fullName>
        <description>Stores SEQNO in EXO after order sync.</description>
        <label>SEQNO (EXO)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Person_Code_In_Exo__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sales Person Code In Exo</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Status_To_Exo__c</fullName>
        <formula>CASE( StageName , 
&quot;Not processed&quot;,0, 
&quot;Fully Processed&quot;,2, 
&quot;Closed Lost&quot;,6,  
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Status To Exo</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <formula>subtotal__c + tax_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <formula>subtotal__c  +  tax_total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <label>Transaction Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_objection__c</fullName>
        <label>Type of objection</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Objection 1:  Too much up front $</fullName>
                </value>
                <value>
                    <fullName>Objection 2:  Staff Not Capable / Trained/ Motivated</fullName>
                </value>
                <value>
                    <fullName>Objection 3: Admin too hard</fullName>
                </value>
                <value>
                    <fullName>Objection 4: No space</fullName>
                </value>
                <value>
                    <fullName>Objection 5: Local hero / Inertia / Not now/ Put off</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Portal_Order_Status__c</fullName>
        <label>Web Portal Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>WP-Confirmed</fullName>
                </value>
                <value>
                    <fullName>WP-PaymentFailed</fullName>
                </value>
                <value>
                    <fullName>WP-PaymentInitiated</fullName>
                </value>
                <value>
                    <fullName>WP-Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Portal_Status__c</fullName>
        <label>Web Portal Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Invoiced</fullName>
                </value>
                <value>
                    <fullName>WP-Confirmed</fullName>
                </value>
                <value>
                    <fullName>WP-PaymentFailed</fullName>
                </value>
                <value>
                    <fullName>WP-PaymentInitiated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <label>City</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>clone_test__c</fullName>
        <label>clone test</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>customer_order_number__c</fullName>
        <label>Customer Order Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>default_Location__c</fullName>
        <label>Default Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>postal_code__c</fullName>
        <label>Postal Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>reference__c</fullName>
        <label>Customer Note</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfcloud2__GoCloudz_Attachment_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment 1</label>
        <referenceTo>sfcloud2__Attachment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Attachment_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcloud2__GoCloudz_Attachment_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attachment 2</label>
        <referenceTo>sfcloud2__Attachment__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunity_Attachment_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sfcloud2__GoCloudz_Watermark__c</fullName>
        <description>Watermark to display on PDF</description>
        <inlineHelpText>Watermark to display on PDF</inlineHelpText>
        <label>Watermark</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>sfcloud2__envelopeId__c</fullName>
        <description>DocuSign envelope id.</description>
        <inlineHelpText>DocuSign envelope id.</inlineHelpText>
        <label>Envelope Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>subtotal__c</fullName>
        <label>Subtotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tax_total__c</fullName>
        <label>Tax Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>AllOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Boa Orders</label>
    </listViews>
    <listViews>
        <fullName>Boa_Purchase_Order</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Purchase_Order</value>
        </filters>
        <label>Boa Purchase Order</label>
    </listViews>
    <listViews>
        <fullName>Boa_Sales_Order</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Opportunity.Sales_order</value>
        </filters>
        <label>Boa Sales Order</label>
    </listViews>
    <listViews>
        <fullName>ClosingNextMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>NEXT_MONTH</value>
        </filters>
        <label>Closing Next Month</label>
    </listViews>
    <listViews>
        <fullName>ClosingThisMonth</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Closing This Month</label>
    </listViews>
    <listViews>
        <fullName>Default_Opportunity_Pipeline</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>OPPORTUNITY.CLOSE_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>Opportunity Pipeline</label>
    </listViews>
    <listViews>
        <fullName>MyOpportunities</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Boa Orders</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Sample_list</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>Sample_list</label>
    </listViews>
    <listViews>
        <fullName>Won</fullName>
        <columns>OPPORTUNITY.NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>OPPORTUNITY.AMOUNT</columns>
        <columns>OPPORTUNITY.CLOSE_DATE</columns>
        <columns>OPPORTUNITY.STAGE_NAME</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OPPORTUNITY.WON</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>OPPORTUNITY.CLOSED</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Won</label>
    </listViews>
    <recordTypes>
        <fullName>Purchase_Order</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <label>Purchase Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_order</fullName>
        <active>true</active>
        <businessProcess>Sales Process</businessProcess>
        <label>Sales order</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Capture_reason_closed_lost</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
ISPICKVAL( StageName  ,&quot;Closed Lost&quot;), 
ISBLANK( Closed_Lost_Reason__c ) 
)</errorConditionFormula>
        <errorMessage>Please enter text in the field closed lost reason</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_Stage_rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( StageName ,&apos;Closed Won&apos;),
   OR(
       ISBLANK(Onboarding_Target_Start_Date__c),
         ISBLANK( Onboarding_Target_Closure_Date__c )  
 )
)</errorConditionFormula>
        <errorMessage>If the stagename is closed won,Onboarding target start date,Onboarding target closure date is  mandetory.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Opportunity_type_Rule</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL( Type , &apos;New Business&apos;) ,
OR(
ISBLANK(Onboarding_Target_Start_Date__c),
         ISBLANK( Onboarding_Target_Closure_Date__c ),
 ISBLANK( Onboarding_Point_of_Contact__c) 
)

)</errorConditionFormula>
        <errorMessage>If Order Type is New Business, Onboarding Target Start Date,Onboarding Target Closure Date and Onbording Point of Contact are Mandatory.</errorMessage>
    </validationRules>
</CustomObject>